# smartpi-fixed

./: README.md  pyproject.toml  setup.py
SmartPi/: README.md  requirements.txt  setup.py
SmartPi/examples/: run_chat.py
SmartPi/smartpi/: __init__.py  gui.py  model.py  predict.py  text_model.py
