[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "smartpi"
version = "0.1.0"
description = "SmartPi AI: Offline ChatGPT-style assistant for Raspberry Pi"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "numpy"
]
authors = [
    { name = "ollie333333", email = "your.email@example.com" }
]

[project.scripts]
smartpi-chat = "smartpi.gui:run_gui"
